
	Stu Redman:
		* Sort source list on opening and add file name to A4AF files
		* Adjust displayed download rates for files and sources 
		  so that the sum matches the total download rate.
		* MSVC: solution for MSVC 2008 Express edition, 
		  project for ed2k and fileview
		  optional GeoIP support
		* Faster progress bars with less overhead (without pens/brushes)

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Fix amuleweb progress bar display for files > 4GB

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.

--------------------------------------------------------------------------------

Version 2.2.3 - The "Vampires suck" version.
----------
2008-10-??

	Alfred:
		* Fixes to compile with Sun Studio 12.

	GonoszTopi:
		* Fixed improper handling of EC connection failures.
		* Fix for shells not properly handling empty lists.
		* POSIX fixes in shell code.
		* Made not finding GeoIP non-fatal.
		* Check if --enable-geoip-static can be fulfilled.
		* Fixed loading of zipped ipfilter files. Thanks to CtrlAltDel
		  for the investigation of the problem.
		* Fixed alc progress bar for files >4GB.
		* Fixed #1056: amulegui: incorrect results when searching with
		  min size >= 4GB

	LittleAbacus:
		* Support multiple selections on CSearchListCtrl::OnMarkAsKnown().

	Skolnick:
		* Fix alc and alcc to work with files bigger than 4GB

	Stu Redman:
		* Fix crash when last category was removed with a completed file in it

	Wuischke:
		* Add checks to cas to prevent segfaults
		* Fix wxCas save file dialog for file types
		* Fix a buffer overflow error in cas
